# pfms_ros_ackerman_ctrl

./: .gitignore  GIT_HELP.md  LICENSE  README.md
quizzes/quiz0/a2/: CMakeLists.txt  main.cpp  sample.cpp  sample.h
quizzes/quiz0/a2/marking/: CMakeLists.txt  utest.cpp
quizzes/quiz0/a2/test/: CMakeLists.txt  utest.cpp
quizzes/quiz1/a1/: CMakeLists.txt  main.cpp  person.cpp  person.h  processing.cpp  processing.h
quizzes/quiz1/a1/marking/: CMakeLists.txt  utest.cpp
quizzes/quiz1/a1/test/: CMakeLists.txt  utest.cpp
quizzes/quiz1/a2/: CMakeLists.txt  main.cpp  processing.cpp  processing.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h
quizzes/quiz1/a2/marking/: CMakeLists.txt  utest.cpp
quizzes/quiz1/a2/test/: CMakeLists.txt  utest.cpp
quizzes/quiz2/a1/: CMakeLists.txt  analysis.cpp  analysis.h  display_race.cpp  display_race.h  main.cpp
quizzes/quiz2/a1/dep/include/: car.h  carinterface.h
quizzes/quiz2/a1/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
quizzes/quiz2/a1/marking/mock/: carmock.cpp  carmock.h
quizzes/quiz2/a1/test/: CMakeLists.txt  utest.cpp
quizzes/quiz2/a2/: CMakeLists.txt  container_ops.cpp  container_ops.h  main.cpp
quizzes/quiz2/a2/marking/: CMakeLists.txt  self.cpp  utest.cpp
quizzes/quiz2/a2/test/: CMakeLists.txt  utest.cpp
quizzes/quiz3/a1/: CMakeLists.txt  analysis.cpp  analysis.h  main.cpp  tf2.cpp  tf2.h
quizzes/quiz3/a1/dep/include/: display.h  tf.h  types.h
quizzes/quiz3/a1/marking/: CMakeLists.txt  utest2.cpp
quizzes/quiz3/a1/test/: CMakeLists.txt  utest.cpp
quizzes/quiz3/a2/: CMakeLists.txt  analysis.cpp  analysis.h  main.cpp
quizzes/quiz3/a2/dep/: radar.h
quizzes/quiz3/a2/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
quizzes/quiz3/a2/test/: CMakeLists.txt  utest.cpp
quizzes/quiz4/a1/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  quadcopter.cpp  quadcopter.h
quizzes/quiz4/a1/marking/: CMakeLists.txt  test_helper.h  utest.cpp  utest2.cpp
quizzes/quiz4/a1/test/: CMakeLists.txt  utest.cpp
quizzes/quiz4/a2/: CMakeLists.txt  package.xml
quizzes/quiz4/a2/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
quizzes/quiz4/a2/src/: analysis.cpp  analysis.h  listener.cpp
quizzes/quiz4/a2/test/: CMakeLists.txt  utest.cpp
quizzes/quiz5/a1/: CMakeLists.txt  package.xml
quizzes/quiz5/a1/marking/: utest.cpp
quizzes/quiz5/a1/src/: detection_node.cpp  detection_node.h  laserprocessing.cpp  laserprocessing.h  main.cpp
quizzes/quiz5/a1/test/: utest.cpp
quizzes/quiz5/a2/: CMakeLists.txt  package.xml
quizzes/quiz5/a2/marking/: utest.cpp
quizzes/quiz5/a2/src/: detection_node.cpp  detection_node.h  main.cpp  rangeprocessing.cpp  rangeprocessing.h
quizzes/quiz5/a2/test/: utest.cpp
scratch/Assignment_1/a1_skeleton/: CMakeLists.txt  MyTests.cpp  ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h  main  main.cpp  mission.cpp  mission.h  missioninterface.h  quadcopter.cpp  quadcopter.h
scratch/Assignment_1/a1_skeleton/test/: ackerman_test.h  mission_test.h  quadcopter_test.h  test_audi.cpp  test_mission.cpp  test_quadcopter.cpp
scratch/Assignment_2/a2_skeleton/: CMakeLists.txt  ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h  logger.cpp  logger.h  main.cpp  mission.cpp  mission.h  missioninterface.h  quadcopter.cpp  quadcopter.h
scratch/Assignment_2/a2_skeleton/test/: CMakeLists.txt  audiCheckOriginToDestination.cpp  audiGoalOrderCheck.cpp  quadcopterCheckOriginToDestination.cpp  quadcopterGoalOrderCheck.cpp  quadcopterReachGoal.cpp  quadcopterReachGoals.cpp
scratch/Assignment_3/a3_skeleton/: CMakeLists.txt  Doxyfile  README.md  package.xml
scratch/Assignment_3/a3_skeleton/doc/: manifest.yaml
scratch/Assignment_3/a3_skeleton/src/: Publisher.cpp  ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h  laserprocessing.cpp  laserprocessing.h  mission.cpp  mission.h  missioninterface.h  sample.cpp  sample.h  testcode.cpp
scratch/Assignment_3/a3_skeleton/test/: utest.cpp
scratch/Assignment_3/a3_support/: CMakeLists.txt  README.md
scratch/Assignment_3/a3_support/data/: GOALS.TXT  test_Goals.TXT
scratch/Assignment_3/a3_support/doc/: manifest.yaml
scratch/Assignment_3/a3_support/src/: goals_publisher.cpp  logger.cpp
skeleton/a1_skeleton/: CMakeLists.txt  ackerman.h  controller.h  index.dox  missioninterface.h  quadcopter.cpp  quadcopter.h
skeleton/a1_skeleton/test/: CMakeLists.txt  README.md  ackerman_test.h  mission_test.h  quadcopter_test.h  test_audi.cpp  test_mission.cpp  test_quadcopter.cpp
skeleton/a2_skeleton/: CMakeLists.txt  ackerman.h  controller.h  controllerinterface.h  main.cpp  mission.h  quadcopter.h
skeleton/a2_skeleton/data/: ACKERMAN.TXT  ACKERMAN_DENSE.TXT  QUADCOPTER.TXT
skeleton/a2_skeleton/test/: CMakeLists.txt  README.md  audiReachGoal.cpp  audiReachGoals.cpp
skeleton/a3_support/: mainpage.dox  package.xml
skeleton/a3_support/data/: GOALS.TXT
skeleton/a3_support/src/: goals_logger.cpp  goals_publisher.cpp  logger.h
skeleton/pfms_support/project_setup/: CMakeLists.txt  package.xml
skeleton/pfms_support/project_setup/launch/: bare.launch  project_setup.launch  project_setup_noetic.launch  tsp_setup.launch
skeleton/pfms_support/project_setup/rviz/: pfms.rviz
skeleton/pfms_support/project_setup/src/: TBK.cpp  laser_republish.cpp  odo_republish.cpp
skeleton/pfms_support/project_setup/srv/: DetectParking.srv  RequestGoal.srv
skeleton/pfms_support/project_setup/worlds/: big_lab.world  sick.inc  sparse_pfms.world  uoa_robotics_lab.cfg  uoa_robotics_lab.world  uoa_robotics_lab_models.inc
tutorials/week01/examples/: CMakeLists.txt  aircon.cpp  arrays.cpp  c_strings.cpp  functions.cpp  hello.cpp  loops_typecasting.cpp  pointers.cpp  structs.cpp  switch_case.cpp  vectors.cpp
tutorials/week01/starter/: CMakeLists.txt  arrays.cpp  enum_example  enum_example.cpp  functions  functions.cpp  loops_typecasting  loops_typecasting.cpp  pointers  pointers.cpp
tutorials/week02/starter/: CMakeLists.txt  Classes.cpp  circle.cpp  circle.h  circle_main  circle_main.cpp
(+306 files in other folders)
