<?xml version="1.0"?>
<!-- %Tag(FULLTEXT,-1)% -->
<package>
  <name>quiz4_a2</name>
  <version>0.1.0</version>
  <description>Quiz4 part A2 package</description>

  <maintainer email="Alen.Alempijevic@uts.edu.au">Alen Alempijevic</maintainer>

  <license>BSD</license>

  <author email="you@yourdomain.tld">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>

